# picomic

./: CMakeLists.txt  README.md  app.uf2  generate.cpp  model_metadata.h  predict.cpp
